hphp/hack/test/typecheck/shape_idx_double_option.php.like_types.exp
File "shape_idx_double_option.php", line 9, characters 22-23:
Invalid argument (Typing[4110])
File "shape_idx_double_option.php", line 9, characters 22-23:
Expected shape(?'asd' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_double_option.php", line 4, characters 12-37:
But got dynamic because it is an unenforceable type
